--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,24 @@
+
+.grid{
+    display: flex;
+    flex-direction: column;
+
+}
 .divline{
     display: flex;
+    flex-grow: 1;
+    align-items: stretch;
+    
+}
+
+.divwrapper{
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .divpixel{
-    height: 30px;
-    width: 30px;
+    min-width: 30px;
+    min-height: 30px;
     background-color: powderblue;
-    margin: 10px;
+    flex-grow:1;
 }
